Implemented requested changes

--- a/package.json
+++ b/package.json
@@ -1,16 +1,15 @@
 {
   "name": "accessible-name",
-  "version": "1.0.0",
+  "version": "0.0.1",
   "description": "This library will contain a TypeScript implementation of the [Accessible Name Computation](https://www.w3.org/TR/accname-1.1/).",
   "main": "accessible-name.js",
   "directories": {
     "doc": "docs"
   },
-  "dependencies": {
+  "devDependencies": {
     "tslint": "^6.1.2",
     "typescript": "^3.9.5"
   },
-  "devDependencies": {},
   "scripts": {
     "build": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -20,8 +19,8 @@
     "url": "git+https://github.com/googleinterns/accessible-name.git"
   },
   "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "author": "Oisín Nolan",
+  "license": "Apache-2.0",
   "bugs": {
     "url": "https://github.com/googleinterns/accessible-name/issues"
   },
