--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
-    "target": "es2017",
-    "module": "es2015",
+    "target": "es6",
+    "module": "es6",
     "declaration": true,
     "declarationMap": true,
     "sourceMap": true,
@@ -13,7 +13,8 @@
     "noImplicitReturns": true,
     "noFallthroughCasesInSwitch": true,
     "noImplicitAny": true,
-    "noImplicitThis": true
+    "noImplicitThis": true,
+    "lib": ["ES6","DOM"]
   },
   "include": [
     "src/**/*.ts"
