--- a/package.json
+++ b/package.json
@@ -7,11 +7,20 @@
     "doc": "docs"
   },
   "devDependencies": {
+    "@types/jasmine": "^3.5.11",
+    "@types/node": "^14.0.14",
+    "common-js": "^0.3.8",
+    "dom-parser": "^0.1.6",
     "jasmine": "^3.5.0",
     "jasmine-core": "^3.5.0",
+    "jsdom": "^16.2.2",
     "karma": "^5.1.0",
     "karma-chrome-launcher": "^3.1.0",
+    "karma-cli": "^2.0.0",
     "karma-jasmine": "^3.3.1",
+    "karma-spec-reporter": "0.0.32",
+    "karma-typescript": "^5.0.3",
+    "karma-typescript-es6-transform": "^5.0.3",
     "tslint": "^6.1.2",
     "typescript": "^3.9.5"
   },
@@ -30,8 +39,5 @@
     "url": "https://github.com/googleinterns/accessible-name/issues"
   },
   "homepage": "https://github.com/googleinterns/accessible-name#readme",
-  "dependencies": {
-    "dom-parser": "^0.1.6",
-    "jsdom": "^16.2.2"
-  }
+  "dependencies": {}
 }
