--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "devDependencies": {
     "@types/jasmine": "^3.5.11",
+    "@types/jsdom": "^16.2.3",
     "@types/node": "^14.0.14",
     "common-js": "^0.3.8",
     "dom-parser": "^0.1.6",
@@ -26,7 +27,7 @@
   },
   "scripts": {
     "build": "tsc",
-    "test": "jasmine"
+    "test": "karma start"
   },
   "repository": {
     "type": "git",
