--- a/package.json
+++ b/package.json
@@ -8,16 +8,13 @@
   },
   "devDependencies": {
     "@types/jasmine": "^3.5.11",
-    "@types/jsdom": "^16.2.3",
-    "@types/node": "^14.0.14",
-    "common-js": "^0.3.8",
-    "dom-parser": "^0.1.6",
     "jasmine": "^3.5.0",
     "jasmine-core": "^3.5.0",
     "jsdom": "^16.2.2",
     "karma": "^5.1.0",
     "karma-chrome-launcher": "^3.1.0",
     "karma-cli": "^2.0.0",
+    "karma-firefox-launcher": "^1.3.0",
     "karma-jasmine": "^3.3.1",
     "karma-spec-reporter": "0.0.32",
     "karma-typescript": "^5.0.3",
