Added implementation for rule 2A

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "devDependencies": {
     "@types/jasmine": "^3.5.11",
+    "@types/node": "^13.11.1",
     "gts": "^2.0.2",
     "jasmine": "^3.5.0",
     "jasmine-core": "^3.5.0",
@@ -20,12 +21,20 @@
     "karma-spec-reporter": "0.0.32",
     "karma-typescript": "^5.0.3",
     "karma-typescript-es6-transform": "^5.0.3",
+    "lit-html": "^1.2.1",
     "tslint": "^6.1.2",
     "typescript": "^3.9.5"
   },
   "scripts": {
     "build": "tsc",
-    "test": "karma start"
+    "test": "karma start",
+    "check": "gts check",
+    "clean": "gts clean",
+    "compile": "tsc",
+    "fix": "gts fix",
+    "prepare": "npm run compile",
+    "pretest": "npm run compile",
+    "posttest": "npm run check"
   },
   "repository": {
     "type": "git",
