--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,4 +13,4 @@ jobs:
       - name: Install dependencies
         run: npm install
       - name: Test
-        run: npm run test
+        run: npm run test-headless
