Split bulid action from lint action. Fix lint failures in tests

--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
   "devDependencies": {
     "@types/jasmine": "^3.5.11",
     "@types/node": "^13.11.1",
+    "@typescript-eslint/eslint-plugin": "^3.6.0",
+    "@typescript-eslint/parser": "^3.6.0",
     "clang-format": "^1.4.0",
     "gts": "^2.0.2",
+    "husky": "^4.2.5",
     "jasmine": "^3.5.0",
     "jasmine-core": "^3.5.0",
     "jsdom": "^16.2.2",
@@ -26,11 +29,14 @@
     "tslint": "^6.1.2",
     "typescript": "^3.9.5"
   },
+  "files": [
+    "!/src/lib/*_test.ts"
+  ],
   "scripts": {
     "build": "tsc",
     "test": "karma start",
     "test-headless": "karma start --single-run --browsers ChromeHeadless,FirefoxHeadless",
-    "check": "gts check",
+    "check": "gts check src/**/*.ts",
     "clean": "gts clean",
     "compile": "tsc",
     "fix": "gts fix",
@@ -50,5 +56,10 @@
     "url": "https://github.com/googleinterns/accessible-name/issues"
   },
   "homepage": "https://github.com/googleinterns/accessible-name#readme",
-  "dependencies": {}
+  "dependencies": {},
+  "husky": {
+    "hooks": {
+      "pre-commit": "npm run fix src/*.ts src/lib/*.ts"
+    }
+  }
 }
