--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "karma": "^5.1.0",
     "karma-chrome-launcher": "^3.1.0",
     "karma-cli": "^2.0.0",
+    "karma-coverage": "^2.0.2",
     "karma-firefox-launcher": "^1.3.0",
     "karma-jasmine": "^3.3.1",
     "karma-spec-reporter": "0.0.32",
@@ -59,6 +60,7 @@
   "dependencies": {},
   "husky": {
     "hooks": {
+      "pre-commit": "npm run fix src/*.ts src/lib/*.ts"
     }
   }
 }
