--- a/package.json
+++ b/package.json
@@ -37,8 +37,8 @@
     "build": "tsc",
     "test": "karma start",
     "test-headless": "karma start --single-run --browsers ChromeHeadless,FirefoxHeadless",
-    "check": "npx gts check src/**/*.ts",
-    "clean": "npx gts clean src/**/*.ts",
+    "check": "npx gts check src/**/*.ts validation/*.ts",
+    "clean": "npx gts clean src/**/*.ts validation/*.ts",
     "compile": "tsc",
     "fix": "npx gts fix",
     "prepare": "npm run compile",
@@ -60,7 +60,7 @@
   "dependencies": {},
   "husky": {
     "hooks": {
-      "pre-commit": "npm run fix src/*.ts src/lib/*.ts"
+      "pre-commit": "npm run fix src/*.ts src/lib/*.ts validation/*.ts"
     }
   }
 }
