--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
   "compileOnSave": true,
   "compilerOptions": {
     "target": "es6",
-    "module": "commonjs",
+    "module": "es6",
     "declaration": true,
     "declarationMap": true,
     "sourceMap": true,
@@ -23,7 +23,8 @@
   ],
   "exclude": [
     "dist",
-    "node_modules"
+    "node_modules",
+    "src/lib/*_test.ts"
   ],
   "types": [
     "@types/jasmine",
