Added npm install

--- a/.github/workflows/bundle.yml
+++ b/.github/workflows/bundle.yml
@@ -24,7 +24,11 @@ jobs:
     - uses: actions/setup-node@v1
       with:
         node-version: 13
-
+        
+    # Install node modules
+    - name: Install node modules
+      run: npm install
+    
     # Create an empty dist/ folder to build into
     - name: Create empty dist/
       run: mkdir dist
