--- a/.github/workflows/bundle.yml
+++ b/.github/workflows/bundle.yml
@@ -31,7 +31,7 @@ jobs:
     
     # Create an empty dist/ folder to build into
     - name: Create empty dist/
-      run: mkdir dist
+      run: mkdir -p dist
     
     # Builds the project in its current state so that the bundle
     # contains up-to-date code
