Trying push plugin

--- a/.github/workflows/bundle.yml
+++ b/.github/workflows/bundle.yml
@@ -56,7 +56,11 @@ jobs:
       run: |
         git config --global user.name 'Oisín Nolan'
         git config --global user.email '34962541+OisinNolan@users.noreply.github.com'
+        git checkout master
         git add bundle.js
         git commit -m "Added auto-generated bundle"
-        git push
+    - name: Push changes
+      uses: ad-m/github-push-action@master
+      with:
+        github_token: ${{ secrets.GITHUB_TOKEN }}
             
