--- a/.github/workflows/bundle.yml
+++ b/.github/workflows/bundle.yml
@@ -56,6 +56,7 @@ jobs:
       run: |
         git config --global user.name 'Oisín Nolan'
         git config --global user.email '34962541+OisinNolan@users.noreply.github.com'
+        git pull
         git add bundle.js
         git commit -m "Added auto-generated bundle"
     - name: Push changes
