Trying to push to local branch

--- a/.github/workflows/bundle.yml
+++ b/.github/workflows/bundle.yml
@@ -62,7 +62,7 @@ jobs:
         git add bundle.js
         git commit -m "Added auto-generated bundle"
     - name: Push changes
-      uses: ad-m/github-push-action@master
+      uses: ad-m/github-push-action@${GITHUB_REF##*/}
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
             
