Testing push to current branch

--- a/.github/workflows/bundle.yml
+++ b/.github/workflows/bundle.yml
@@ -20,7 +20,7 @@ jobs:
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
     # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-    - uses: actions/checkout@master
+    - uses: actions/checkout@OisinNolan-patch-1
       with:
         persist-credentials: false # otherwise, the token used is the GITHUB_TOKEN, instead of your personal token
         fetch-depth: 0 # otherwise, you will failed to push refs to dest repo
@@ -62,7 +62,7 @@ jobs:
         git add bundle.js
         git commit -m "Added auto-generated bundle"
     - name: Push changes
-      uses: ad-m/github-push-action@${GITHUB_REF##*/}
+      uses: ad-m/github-push-action@OisinNolan-patch-1
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
             
