--- a/.github/workflows/bundle.yml
+++ b/.github/workflows/bundle.yml
@@ -22,6 +22,7 @@ jobs:
     # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
     - uses: actions/checkout@master
       with:
+        ref: ${{ github.ref }}
         fetch-depth: 0 # otherwise, you will failed to push refs to dest repo
     - uses: actions/setup-node@v1
       with:
