--- a/.github/workflows/bundle.yml
+++ b/.github/workflows/bundle.yml
@@ -65,5 +65,5 @@ jobs:
       uses: ad-m/github-push-action@master
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
-        branch: dev_bundle
+        branch: bundle
             
