--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "build": "tsc",
     "test": "karma start",
     "test-headless": "karma start --single-run --browsers ChromeHeadless,FirefoxHeadless",
-    "check": "npx gts check src/**/*.ts validation/*.ts",
+    "check": "npx gts check src/**/*.ts validation/src/**/*.ts",
     "clean": "npx gts clean src/**/*.ts validation/*.ts",
     "compile": "tsc",
     "fix": "npx gts fix",
@@ -60,7 +60,7 @@
   "dependencies": {},
   "husky": {
     "hooks": {
-      "pre-commit": "npm run fix src/*.ts src/lib/*.ts validation/src/*.ts validation/src/lib/*.ts validation/src/public/scripts/*.ts",
+      "pre-commit": "npm run fix src/*.ts src/lib/*.ts validation/src/*.ts validation/src/lib/*.ts validation/src/static/scripts/*.ts",
       "pre-push": "npm run build && rollup dist/accessible_name.js --file bundle.js --format iife --name \"accname\" && git add bundle.js && git commit --amend --no-edit"
     }
   }
