--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -9,8 +9,11 @@ jobs:
       - uses: actions/setup-node@v1
         with:
           node-version: 13
-      - run: npm install
-      - run: npm run check
-      - run: cd validation
-      - run: npm install
-      - run: npm run check
+      - name: Lint accname
+        run: npm install
+        run: npm run check
+
+      - name: Lint validation
+        run: npm install
+        run: npm run check
+        working-directory: ./validation
