--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,10 +10,12 @@ jobs:
         with:
           node-version: 13
       - name: Build accname
-        run: npm install
-        run: npm run build
+        run: |
+          npm install
+          npm run build
 
       - name: Build validation
-        run: npm install
-        run: npm run build
+        run: | 
+          npm install
+          npm run build
         working-directory: ./validation
