Validation App: Index page (#29)
* Added index page & functionality

* Added newlines

* Typos

* Added codemirror types

* Added codemirror types & npm run build includes validation

* Updated lint & build github actions to include validation

* Implemented requested changes

* Added defininition for interfaces in index.ts

* Added defininition for interfaces in index.ts

* newline

* Update build.yml

* Lint workflow syntax error

* Implemented requested changes

* Document position

--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -9,5 +9,13 @@ jobs:
       - uses: actions/setup-node@v1
         with:
           node-version: 13
-      - run: npm install
-      - run: npm run check
+      - name: Lint accname
+        run: |
+          npm install
+          npm run check
+
+      - name: Lint validation
+        run: |
+          npm install
+          npm run check
+        working-directory: ./validation
