--- a/package.json
+++ b/package.json
@@ -37,8 +37,8 @@
     "build": "tsc",
     "test": "karma start",
     "test-headless": "karma start --single-run --browsers ChromeHeadless,FirefoxHeadless",
-    "check": "npx gts check src/**/*.ts validation/src/**/*.ts",
-    "clean": "npx gts clean src/**/*.ts validation/*.ts",
+    "check": "npx gts check src/*.ts src/**/*.ts",
+    "clean": "npx gts clean src/*.ts src/**/*.ts",
     "compile": "tsc",
     "fix": "npx gts fix",
     "prepare": "npm run compile",
