--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,5 +9,13 @@ jobs:
       - uses: actions/setup-node@v1
         with:
           node-version: 13
-      - run: npm install
-      - run: npm run build
+      - name: Build accname
+        run: |
+          npm install
+          npm run build
+
+      - name: Build validation
+        run: | 
+          npm install
+          npm run build
+        working-directory: ./validation
