--- a/package.json
+++ b/package.json
@@ -1,8 +1,10 @@
 {
-  "name": "accessible-name",
-  "version": "0.0.1",
-  "description": "This library will contain a TypeScript implementation of the [Accessible Name Computation](https://www.w3.org/TR/accname-1.1/).",
-  "main": "accessible-name.js",
+  "name": "accname",
+  "version": "1.0.0",
+  "description": "This library contains a TypeScript implementation of the [Accessible Name Computation](https://www.w3.org/TR/accname-1.1/).",
+  "main": "dist/accessible_name.js",
+  "module": "dist/accessible_name.js",
+  "types": "dist/accessible_name.d.ts",
   "directories": {
     "doc": "docs"
   },
@@ -31,7 +33,7 @@
     "typescript": "^3.9.5"
   },
   "files": [
-    "!/src/lib/*_test.ts"
+    "dist/**/*"
   ],
   "scripts": {
     "build": "tsc",
@@ -50,7 +52,7 @@
     "type": "git",
     "url": "git+https://github.com/googleinterns/accessible-name.git"
   },
-  "keywords": [],
+  "keywords": ["accname", "accessible name", "accessible name computation", "a11y", "web accessibility"],
   "author": "Oisín Nolan",
   "license": "Apache-2.0",
   "bugs": {
